# loopgate_harness

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PROMPT.md  README.md  pyproject.toml
.githooks/: pre-commit  pre-push  prepare-commit-msg
.github/workflows/: ci.yml
docs/: PROJECT_STATUS.md  PROMPT.md  plan.md
harness/: cli.py  contextrot.py  gate.py  health.py  preferences.py  ralph.ps1  ralph.sh
harness/js-scaffold/: PROMPT.md  README.md  index.html  package-lock.json  package.json  quiz.js  test.js
harness/js-scaffold/specs/: quiz.md
harness/tests/: conftest.py  test_cli.py  test_contextrot.py  test_gate.py  test_health.py  test_integration.py  test_preferences.py  test_properties.py  test_ralph.py  test_specs.py  test_structure.py
harness/tests/data/: claude-0002.jsonl  codex-0001.jsonl
scratchpad/: README.md
specs/: base.md
src/contextrot/: __init__.py  scorer.py
src/preferences/: preferences.js
src/preferences/tests/: test_preferences.py
tests/: test_contextrot.py  test_specs.py
tests/data/: codex-0004.jsonl  codex-0005.jsonl
tests/harness/: conftest.py  test_cli.py  test_gate.py  test_integration.py  test_ralph.py  test_structure.py
