[project]
name = "ralph-harness"
version = "0.1.0"
description = "Gated, harnessed, single-worker autonomy loop (Ralph) scaffold for starting new Python projects."
authors = [{ name = "rxdt" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ralph", "agent", "autonomy", "scaffold", "harness", "llm", "codex", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "packaging",
    "pydantic",
    "tomlkit",
    "typer"
]
[dependency-groups]
dev = [
    "hypothesis",
    "pylint",
    "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
    "semgrep"
]

[project.scripts]
harness = "harness.cli:main"

[project.urls]
Homepage = "https://github.com/rxdt/py_ralph_frame"
Repository = "https://github.com/rxdt/py_ralph_frame"
Issues = "https://github.com/rxdt/py_ralph_frame/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

# ==============================================================================
# Pyright Configuration
# ==============================================================================
[tool.pyright]
typeCheckingMode = "strict"
# Silences third-party untyped library noise
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUntypedFunctionDecorator = "none"
reportMissingTypeStubs = "none"
reportAssertAlwaysTrue = "error"
reportUnusedImport = "none"           # Handled by Ruff F401
reportUnusedVariable = "none"         # Handled by Ruff F841
verboseOutput = true
include = ["src", "harness"]

# ==============================================================================
# Pytest Configuration
# ==============================================================================
[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra"]
testpaths = ["tests", "harness/tests"]
pythonpath = ["src", "harness"]

# ==============================================================================
# Test Coverage Configuration
# ==============================================================================
[tool.coverage]
# Add every directory that ships code here to ensure 100% coverage
run.source = ["src", "harness"]
report.show_missing = true
report.skip_covered = false
report.fail_under = 100
skip_covered = false

# ==============================================================================
# Pylint Configuration
# ==============================================================================
[tool.pylint]
main.load-plugins = ["pylint.extensions.docparams"]
main.ignore = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
    "scratchpad",
    "tests",
    "harness/tests"
]

format.max-line-length = 110         # Keep Pylint line accounting aligned with Ruff E501
format.max-module-lines = 500        # Enable Pylint C0302 because Ruff has no equivalent
parameter_documentation.accept-no-param-doc = false
reports.reports = "yes"
reports.score = true
"messages control".enable = ["F", "I", "R0022", "missing-param-doc"]

# ==============================================================================
# Unified Ruff Configuration
# ==============================================================================
[tool.ruff]
target-version = "py311"
preview = true
line-length = 110
force-exclude = true
exclude = [
    "*.md",
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "scratchpad",
    "node_modules",
    ".pytest_cache",
    ".ruff_cache",
    ".uv",
    "**/.pylint_bits/**",  # Stops Ruff from fighting Pylint's internal cache
]
[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
mccabe.max-complexity = 8  # Prevent structural bloat, path-count limit for functions
pycodestyle.max-doc-length = 110  # Enforce W505 for comments and docstrings
pycodestyle.ignore-overlong-task-comments = true
pydocstyle.convention = "google"
pydoclint.ignore-one-line-docstrings = true
select = [
    "A",       # flake8-builtins (prevents shadowing Python builtins)
    "ARG",     # flake8-unused-arguments (dead params and fake extension points)
    "ASYNC",   # flake8-async (catches blocks/misuse in async frameworks)
    "ASYNC",   # flake8-async (catches blocks/misuse in async frameworks)
    "B",       # flake8-bugbear (catches common backend design flaws)
    "BLE",     # flake8-blind-except (blocks quiet 'except Exception: pass')
    "C",       # C-prefixed rules, including mccabe and comprehensions
    "C4",      # flake8-comprehensions (.e.g unnecessary list comprehensions)
    "C90",     # Enables McCabe cyclomatic complexity checks
    "COM",     # flake8-commas. Trailing comma added.
    "DOC",     # Validates parameter & return documentation
    "D300",    # Use """ triple quotes for docstrings """
    "DOC102",  # Documented parameter {id} must be in the function's signature
    "D102",    # No missing docstring in public method
    "D103",    # No missing docstring in public function
    "D202",    # No return s in docstring if function doesn't return anything
    "D417",    # No missing arg description in docstring for {definition}: {name}
    "D419",    # No empty docstrings
    "DOC501",  # Raised exception {id} missing from docstring
    "DTZ",     # flake8-datetimez (forbid naive datetime usage)
    "E",       # pycodestyle: Catches objective syntax rule violations
    "EM",      # flake8-errmsg (keep exception messages clean and reusable)
    "ERA",     # Catches commented-out code bloat
    "F",       # Pyflakes (unused imports, undefined variables)
    "FLY",     # Converts .format() and % string into modern f-string
    "FURB",    # Modern simplifications, some loop/set mutation patterns
    "G",       # flake8-logging-format (safe logging format conventions)
    "I",       # isort (clean, predictable import sorting)
    "ISC",     # flake8-implicit-str-concat, Catch missing commas in lists
    "LOG",     # flake8-logging (logging misuse and avoidable root logger use)
    "LOG",     # Prevents common logging bugs.
    "N",       # Enable pep8-naming rules globally
    "PERF",    # Avoids inefficient loop/allocation patterns
    "PGH",     # pygrep-hooks (blanket suppression hygiene) Bans generic # noqa or # type: ignore
    "PIE",     # flake8-pie, removes unnecessary code constructs
    "PLC",     # Pylint convention rules
    "PLE",     # Pylint error rules
    "PLR",     # Pylint Refactor (controls complexity and argument bloat)
    "PLW",     # Pylint warning rules
    "PT",      # flake8-pytest-style (idiomatic pytest without docstring noise) e.g. pytest.raise not try/except
    "PTH",     # flake8-use-pathlib (prefer Path over error-prone os/path string handling)
    "PYI",     # Prevents bad practices in files that handle interfaces/architecture
    "RET",     # Cleaner return flow, fewer lazy else chains.
    "RSE",     # flake8-raise (clean raise statements)
    "RUF",     # Ruff-specific rules
    "S",       # flake8-bandit (security checks: SQLi, hardcoded credentials)
    "SIM",     # flake8-simplify (prefer simpler control flow and syntax)
    "SLF001",  # No start with single underscore outside defining module
    "T10",     # flake8-debugger (forbid breakpoint/debugger calls)
    "T20",     # flake8-print (forbids print statements; forces logging)
    "TID",     # flake8-tidy-imports (forces clean absolute imports)
    "TRY",     # tryceratops (exception handling hygiene)
    "UP",      # Modern Python idioms
    "W",       # Catches stylistic choices that harm readability
]
ignore = [
    "COM812",   # Let Ruff format own trailing commas to avoid formatter conflicts
    "PLR2004",  # Allow 'magic values" (unnamed numbers)
    "S607",     # Allow resolving git/uv from PATH
]
[tool.ruff.lint.pylint]      # Prevent unreadable complexity and code
max-nested-blocks = 4        # Stop indentation madness
max-positional-args = 4      # Max total params, to prevent big initializers. Match max-args so no def(*)
max-args = 4                 # Do not build big object initializers.
max-public-methods = 5       # Cap public methods per class
max-statements = 25          # Cap executable statements per function/method
max-branches = 6             # Cap branching paths per function/method; long if/elif chains are banned
max-returns = 4              # Cap return exits per function/method
max-locals = 10              # Cap local variable sprawl per function/method

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"  # Enforce absolute imports
banned-api."typing.cast".msg = "Do not use cast(); fix the type at the boundary instead."
banned-api."re".msg = "Regex is slow. Use Python built-in string manipulation operations."

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104"]
"**/tests/**/*.py" = [
    "D100",  # Test modules do not need noisy docstrings
    "D101",  # Test classes do not need noisy docstrings
    "D102",  # Test helper methods do not need noisy docstrings
    "D103",  # Test functions describe behavior through test names
    "D104",  # Test package boundaries do not need package docstrings
    "DOC201", # Tests don't need docstring-missing-returns
    "S101",  # Allow 'assert' statements (needed for pytest)
]
"harness/**/*.py" = [
    "S404", # Triggers when code imports subprocess or os related to process spawn
    "S603"  # Flags execution without a shell
]
"tests/harness/{conftest,test_ralph,test_cli,test_integration}.py" = ["S404", "S603"]  # allow shell execution
