[project]
name = "loopgate"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "packaging",
    "pydantic",
    "tomlkit",
    "typer"
]
[dependency-groups]
dev = [
    "hypothesis",
    "pylint",
    "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
    "semgrep",
    "complexipy"
]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness", "src/preferences"]  # src/ prefix stripped, so it imports as `preferences`
exclude = ["harness/tests"]                # machinery tests don't ship; preferences/tests do

# ==============================================================================
# Harness Configuration — single source of truth for agents and every check.
# harness/gate.py parses [tool.harness] once at import into the constants it uses.
# CI runs `harness gate`, so it uses the same commands.
# Humans own this file (it is agent-forbidden below).
# ==============================================================================
# argv preset per agent for `harness run <agent>`
[tool.harness.agents]
claude = [
    "claude",
    "--model", "opus",
    "--permission-mode", "acceptEdits",
    # "--bare" # for one-shot minimal run: skips MCP, hooks, plugins, CLAUDE.md, reduced startup, and sets
    # CLAUDE_CODE_SIMPLE + uses CLAUDE_CODE_OAUTH_TOKEN (ANTHROPIC_API_KEY billed), no .claude log
    "--no-session-persistence",  # no-save session data good for disposable auto tasks
    "--output-format", "stream-json",
    "--verbose", "-p",
]
codex = [
    # env -u clears the CODEX_* session/thread ids so a child agent never binds to the parent conversation
    "env", "-u", "CODEX_THREAD_ID", "-u", "CODEX_CONVERSATION_ID", "-u", "CODEX_SESSION_ID",
    "codex",
    "exec",
    "--model", "gpt-5.5",
    "--json",
    "--sandbox", "danger-full-access", "-",
]
agy = [
    "agy",
    "--model", "gemini-3.5-flash-low",
    "--dangerously-skip-permissions",
    "--add-dir", ".",
    "--log-file", "{log_file}",
    "--prompt", "-"
]
copilot = [
    "copilot",
    "--model=auto",  # if paid: https://docs.github.com/en/copilot/reference/ai-models/supported-models
    "--output-format", "json", "--stream", "on",
    "--allow-all", "--no-ask-user",
]

[tool.harness]
languages = ["py"]

# EXAMPLE OF WHAT Javascript checks might be
#
# [tool.harness.preflight]
# checks = ["npm", "--prefix", "harness/js-scaffold", "run", "preflight"]
# [tool.harness.gate]
# checks = ["npm", "--prefix", "harness/js-scaffold", "run", "gate"]
#
# EXAMPLE OF WHAT Ruby checks might be
#
# [tool.harness.rb.preflight]
# checks = ["bundle", "exec", "rubocop"]
# [tool.harness.rb.gate]
# checks = ["bundle", "exec", "rspec"]

[tool.harness.preflight]
lint = ["uv", "run", "--no-cache", "--no-sync", "ruff", "check", "--show-fixes", "."]
pylint = ["uv", "run", "--no-sync", "pylint", "src", "harness"]
format = ["uv", "run", "--no-sync", "ruff", "format", "--check"]
command = ["uv", "run", "--no-sync", "complexipy", "."]

[tool.harness.gate]
security = [
    "uv", "run", "--no-sync", "semgrep", "scan",
    "--error",  # exit nonzero on findings so the gate blocks the commit, not just reports
    "--config", "auto",
    "--config", "p/secrets",
    "--exclude-rule", "yaml.github-actions.security.github-actions-mutable-action-tag.github-actions-mutable-action-tag",
    ".",
]
types = ["uv", "run", "--no-sync", "pyright", "--outputjson"]
pytest = [
    "uv", "run", "--no-cache", "--no-sync", "pytest",
    "--cov", "--cov-report=term-missing", "--cov-fail-under=100",
]

[tool.harness.FORBIDDEN]
DIRS = ["harness/", "tests/harness/", ".githooks/", ".github/", "src/preferences/"]
FILES = [
    "agents.md",
    "pyproject.toml",
    "docs/prompt.md",
    "docs/plan.md",     # delete or comment out if you want agents to manage the vision
    "uv.lock",
    # tooling/config files that would weaken checks in this file
    "pytest.ini",
    "tox.ini",
    "setup.cfg",
    ".coveragerc",
    "ruff.toml",
    ".ruff.toml",
    ".semgrepignore",
    "pyrightconfig.json",
    ".pylintrc",
    ".gitmodules",
]
PATTERNS = [
    "# noqa",
    "# flake8",
    "type: ignore",
    "type:ignore",
    "no_type_check",
    "pyright: ignore",
    "from typing import any",
    "from typing import cast",
    "from typing import no_type_check",
    "mypy: ignore",
    "pragma: no cover",
    "// eslint-disable",
    "ts-ignore",
    "ts-nocheck",
    "ts-expect-error",
    "--no-verify",
    "hookspath",
    "pytest.mark.skip",
    "fail_under",
    "cov-fail-under",
    "# pylint:",
    "pytest.mark.xfail",
]

# ==============================================================================
# Pyright Configuration
# ==============================================================================
[tool.pyright]
typeCheckingMode = "strict"             # Pyright's strictest mode.
reportAssertAlwaysTrue = "error"        # Catch asserts that are always true.
reportUnusedImport = "none"             # Handled by Ruff F401
reportUnusedVariable = "none"           # Handled by Ruff F841
verboseOutput = true                    # JSON report output when Pyright is run
include = ["src", "harness"]            # Type-check only code shipped by this template.

# ==============================================================================
# Pytest Configuration
# ==============================================================================
[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra"]                       # print useful short reasons for outcomes
testpaths = ["tests", "harness/tests", "src/preferences/tests"]
pythonpath = ["src", "harness"]

# ==============================================================================
# Test Coverage Configuration
# ==============================================================================
[tool.coverage]
# Add every directory that ships code here to ensure 100% coverage
run.source = ["src", "harness"]
report.show_missing = true             # Show exact missed lines when coverage fails.
report.skip_covered = false            # Keep fully covered files visible in reports.
report.fail_under = 100                # Block merges unless all shipped code is covered.
skip_covered = false                   # Same behavior for older coverage config readers.

# ==============================================================================
# Complexipy Configuration
# ==============================================================================
[tool.complexipy]
paths = ["src", "harness"]
exclude = ["**/tests/**"]    # Test code can be more branching and example-heavy than production code.
max-complexity-allowed = 10  # Cognitive complexity cap catches deeply nested, hard-to-read flow.
no-ignore = true             # Disallow `# complexipy: ignore`, fix complexity instead of suppressing it.
report-ignored = true
failed = true                # Show only functions over the threshold so gate output stays actionable.
sort = "file_name"
quiet = false

# ==============================================================================
# Pylint Configuration
# ==============================================================================
[tool.pylint]
main.load-plugins = ["pylint.extensions.docparams"]
main.ignore = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
    "scratchpad",
    "tests",
    "**/tests/**",
    "harness/tests"
]
format.max-line-length = 110         # Keep Pylint line accounting aligned with Ruff E501
format.max-module-lines = 500        # Enable Pylint C0302 because Ruff has no equivalent
parameter_documentation.accept-no-param-doc = false  # Require Args docs when Pylint docparams sees params.
reports.reports = "yes"              # Print detailed Pylint reports so humans see why score changed.
reports.score = true                 # Keep Pylint's score visible as a coarse trend signal.
"messages control".enable = ["F", "I", "R0022", "missing-param-doc"]  # Fatal/info, stale options, param docs.

# ==============================================================================
# Unified Ruff Configuration
# ==============================================================================
[tool.ruff]
target-version = "py311"
preview = true                      # Enable newer Ruff rules before they are fully stable.
line-length = 110                   # Keep code readable without forcing narrow wrapping.
force-exclude = true                # Respect excluded paths even when they are passed directly.
exclude = [
    "*.md",
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "scratchpad",
    "node_modules",
    ".pytest_cache",
    ".ruff_cache",
    ".uv",
    "**/.pylint_bits/**",          # Stops Ruff from fighting Pylint's internal cache
]
[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []                                    # Allow Ruff to safely auto-fix what it can
mccabe.max-complexity = 8                         # Prevent structural bloat, path-count limit for functions
pycodestyle.max-doc-length = 110                  # Enforce W505 for comments and docstrings
pycodestyle.ignore-overlong-task-comments = true  # Let TODO-style tracker lines exceed max doc length.
pydocstyle.convention = "google"  # Interpret Args/Returns/Raises sections as Google-style docstrings.
pydoclint.ignore-one-line-docstrings = true       # Allow obvious one-line docstrings light
select = [
    "A",       # flake8-builtins (prevents shadowing Python builtins)
    "ARG",     # flake8-unused-arguments (dead params and fake extension points)
    "ASYNC",   # flake8-async (catches blocks/misuse in async frameworks)
    "B",       # flake8-bugbear (catches common backend design flaws)
    "BLE",     # flake8-blind-except (blocks quiet 'except Exception: pass')
    "C",       # C-prefixed rules, including mccabe and comprehensions
    "C4",      # flake8-comprehensions (.e.g unnecessary list comprehensions)
    "C90",     # Enables McCabe cyclomatic complexity checks
    "COM",     # flake8-commas. Trailing comma added.
    "DTZ",     # flake8-datetimez (forbid naive datetime usage)
    "E",       # pycodestyle: Catches objective syntax rule violations
    "EM",      # flake8-errmsg (keep exception messages clean and reusable)
    "ERA",     # Catches commented-out code bloat
    "F",       # Pyflakes (unused imports, undefined variables)
    "FLY",     # Converts .format() and % string into modern f-string
    "FURB",    # Modern simplifications, some loop/set mutation patterns
    "G",       # flake8-logging-format (safe logging format conventions)
    "I",       # isort (clean, predictable import sorting)
    "ISC",     # flake8-implicit-str-concat, Catch missing commas in lists
    "LOG",     # flake8-logging (logging misuse and avoidable root logger use)
    "N",       # Enable pep8-naming rules globally
    "PERF",    # Avoids inefficient loop/allocation patterns
    "PGH",     # pygrep-hooks (blanket suppression hygiene) Bans generic # noqa or # type: ignore
    "PIE",     # flake8-pie, removes unnecessary code constructs
    "PLC",     # Pylint convention rules
    "PLE",     # Pylint error rules
    "PLR",     # Pylint Refactor (controls complexity and argument bloat)
    "PLW",     # Pylint warning rules
    "PT",      # flake8-pytest-style (idiomatic pytest without docstring noise) e.g. pytest.raise not try/except
    "PTH",     # flake8-use-pathlib (prefer Path over error-prone os/path string handling)
    "PYI",     # Prevents bad practices in files that handle interfaces/architecture
    "RET",     # Cleaner return flow, fewer lazy else chains.
    "RSE",     # flake8-raise (clean raise statements)
    "RUF",     # Ruff-specific rules
    "S",       # flake8-bandit (security checks: SQLi, hardcoded credentials)
    "SIM",     # flake8-simplify (prefer simpler control flow and syntax)
    "T10",     # flake8-debugger (forbid breakpoint/debugger calls)
    "T20",     # flake8-print (forbids print statements; forces logging)
    "TID",     # flake8-tidy-imports (forces clean absolute imports)
    "TRY",     # tryceratops (exception handling hygiene)
    "UP",      # Modern Python idioms
    "W",       # Catches stylistic choices that harm readability
    "private-member-access",  # No start with single underscore outside defining module
    "triple-single-quotes",    # Use """ triple quotes for docstrings """
    "undocumented-public-method",    # No missing docstring in public method
    "undocumented-public-function",    # No missing docstring in public function
    "blank-line-after-function",    # No blank line between a function docstring and the function body
    "undocumented-param",    # No missing arg description in docstring for {definition}: {name}
    "empty-docstring",    # No empty docstrings
    "DOC",     # Global. Validates parameter & return documentation
    "docstring-extraneous-parameter",  # Redundancy of "DOC". Documented parameter {id} must be in the function's signature
    "docstring-missing-returns",  # Redundancy of "DOC". Structured docstrings must include Returns when code returns.
    "docstring-missing-exception",  # Redundancy of "DOC". Raised exception {id} missing from docstring
]
ignore = [
    "missing-trailing-comma",   # Let Ruff format own trailing commas to avoid formatter conflicts
    "magic-value-comparison",  # Allow 'magic values" (unnamed numbers)
    "start-process-with-partial-path",     # Allow resolving git/uv from PATH
]
[tool.ruff.lint.pylint]      # Prevent unreadable complexity and code
max-nested-blocks = 4        # Stop indentation madness
max-positional-args = 5      # Max total params, to prevent big initializers. Match max-args so no def(*)
max-args = 5                 # Do not build big object initializers.
max-public-methods = 5       # Cap public methods per class
max-statements = 25          # Cap executable statements per function/method
max-branches = 6             # Cap branching paths per function/method; long if/elif chains are banned
max-returns = 4              # Cap return exits per function/method
max-locals = 10              # Cap local variable sprawl per function/method

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"  # Enforce absolute imports
banned-api."typing.cast".msg = "Do not use cast(); fix the type at the boundary instead."
banned-api."re".msg = "Regex is slow. Use Python built-in string manipulation operations."

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["undocumented-public-package"]  # Package marker files do not need package docstrings.
"**/tests/**/*.py" = [
    "undocumented-public-module",  # Test modules do not need noisy docstrings
    "undocumented-public-class",  # Test classes do not need noisy docstrings
    "undocumented-public-method",  # Test helper methods do not need noisy docstrings
    "undocumented-public-function",  # Test functions describe behavior through test names
    "undocumented-public-package",  # Test package boundaries do not need package docstrings
    "docstring-missing-returns", # Tests explain behavior through assertions; no Returns section needed.
    "assert",   # Allow 'assert' statements (needed for pytest)
]
"harness/**/*.py" = [
    "suspicious-subprocess-import", # Harness code intentionally imports subprocess to run local tools.
    "subprocess-without-shell-equals-true"  # Harness code intentionally executes trusted local tool commands without a shell.
]
